@@ -148,6 +148,7 @@ sub scan_options {
                     # This fires the reloaded-scan-options signal,
                     # so don't set this until we have finished
                     $self->set( 'available-scan-options', $options );
+                    $self->set_paper_formats( $self->{paper_formats} );
                 },
                 sub {    # error callback
                     my ($message) = @_;
@@ -180,9 +181,8 @@ sub _initialise_options {    ## no critic (ProhibitExcessComplexity)
 
     # We have hereby removed the active profile and paper,
     # so update the properties without triggering the signals
-    $self->{profile}       = undef;
-    $self->{paper_formats} = undef;
-    $self->{paper}         = undef;
+    $self->{profile} = undef;
+    $self->{paper}   = undef;
 
     delete $self->{combobp}; # So we don't carry over from one device to another
     for ( 1 .. $num_dev_options - 1 ) {
