@@ -7,6 +7,9 @@
     and move tool management there from Edit/Preferences
 * Fixed extended page numbering toggle
 * Fixed restoring crashed session
+* Fixed paper sizes after switching device. Closes bug #216
+  (options for A4, US Legal, and US Letter have disappeared in the Geometry
+   options for Scansnap IX500 in 1.3.9)
 
 
 1.3.9 (06.03.2016):
